# dioxus-bootstrap

./: Cargo.toml
src/: lib.rs
src/components/: mod.rs
src/components/button/: mod.rs
src/components/dropdown/: dropdown_menu.rs  mod.rs
src/components/form/: form.rs  form_control.rs  form_field.rs  invalid_feedback.rs  mod.rs
src/components/form_control/: mod.rs
src/components/modal/: mod.rs
src/components/nav/: mod.rs  nav_item.rs
src/components/select/: mod.rs
src/hooks/: document_click_listener.rs  mod.rs  uid_generator.rs
src/layout/: col.rs  mod.rs  row.rs
src/models/: clicked.rs  mod.rs
tests/: main.rs
