[package]
name = "dioxus-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = {git = "https://github.com/DioxusLabs/dioxus.git", features = ["router"]}
wasm-bindgen = "0.2.100"
web-sys = {version = "0.3.77", features = ["MouseEvent", "Window", "Element", "Document"]}
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.40"
once_cell = "1.19.0"