[package]
name = "dioxus-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = {version = "0.6.2", features = ["router"]}
wasm-bindgen = {version = "0.2.100"}
web-sys = {version = "0.3.77", features = ["MouseEvent", "Window", "Element", "Document"]}
uuid = { version = "1.10.0", features = ["v4"] }
tracing = "0.1.40"
once_cell = "1.19.0"
libc = "0.2.169"
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
